--- a/base/templates/products.html
+++ b/base/templates/products.html
@@ -22,14 +22,16 @@
             <div class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-400 hover:text-green-600">
                 <i class="fas fa-search"></i>
             </div>
-            <button type="submit" class="ml-4 px-4 py-2 rounded-lg  text-right bg-green-600 text-white hover:bg-green-700 transition-all block height-full">
+        <button type="submit" class="ml-4 px-4 py-2 rounded-lg  text-right bg-green-600 text-white hover:bg-green-700 transition-all block height-full">
                 البحث
             </button>
         </form>
+        {% if user.user_type == 'accountant' %}
         <button onclick="AddModalFunction()" class="flex items-center gap-2 justify-between p-2 rounded-lg bg-gradient-to-r from-green-500 to-green-600 text-white hover:from-green-600 hover:to-green-700 transition-all shadow-md hover:shadow-lg">
             إضافة منتج
             <i class="fas fa-plus"></i>
         </button>
+        {% endif %}
 
     </div>
     
@@ -41,7 +43,9 @@
                     <th class="text-right bold py-3 px-4 text-sm font-semibold text-slate-600">الفئة</th>
                     <th class="text-right bold py-3 px-4 text-sm font-semibold text-slate-600">السعر</th>
                     <th class="text-right bold py-3 px-4 text-sm font-semibold text-slate-600">الكمية</th>
+                    {% if user.user_type == 'accountant' %}
                     <th class="text-center bold py-3 px-4 text-sm font-semibold text-slate-600">الإجراءات</th>
+                    {% endif %}
                 </tr>
             </thead>
             <tbody>
@@ -58,6 +62,7 @@
                     <td class="py-4 px-4 text-sm text-slate-600 product-category-{{product.id}}">{{ product.category.name }}</td>
                     <td class="py-4 px-4 text-sm text-slate-600 product-price-{{product.id}}">{{ product.price }}</td>
                     <td class="py-4 px-4 text-sm text-slate-600 product-stock-{{product.id}}">{{ product.stock }}</td>
+                    {% if user.user_type == 'accountant' %}
                     <td class="py-4 px-4 flex items-center justify-center gap-2">
                         <button  onclick="EditModalFunction({{ product.id }})" class="openEditProductModal flex items-center text-sm gap-2 justify-between p-2 rounded-lg bg-gradient-to-r from-green-500 to-green-600 text-white hover:from-green-600 hover:to-green-700 transition-all shadow-md hover:shadow-lg">
                             تعديل
@@ -68,6 +73,7 @@
                             <i class="fas fa-trash"></i>
                         </button>
                     </td>
+                    {% endif %}
                 </tr>
                 {% empty %}
                 {% if request.GET %}
