--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}تسجيل شركة جديدة - Inventory Pro{% endblock %}
+{% block title %}تسجيل شركة جديدة - hasibh{% endblock %}
 
 {% block auth_content %}
 <div class="card w-full max-w-4xl bg-base-100 shadow-xl my-8">
