--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,7 +17,7 @@
                 </span>
             </div>
         {% else %}
-            <span class="text-lg font-bold text-primary">Inventory Pro</span>
+            <span class="text-lg font-bold text-primary">hasibh</span>
         {% endif %}
     </div>
     
