--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -22,11 +22,13 @@
     </div>
     
     <div class="flex-none gap-2">
-        <!-- Theme Controller -->
+        <!-- Theme Toggle -->
         <label class="swap swap-rotate btn btn-ghost btn-circle">
-            <input type="checkbox" class="theme-controller" value="dark" />
-            <i class="fa-solid fa-sun swap-off fill-current text-xl"></i>
-            <i class="fa-solid fa-moon swap-on fill-current text-xl"></i>
+            <input type="checkbox" class="theme-switch" />
+            <!-- sun icon (on) -->
+            <i class="fa-solid fa-sun swap-on fill-current text-xl"></i>
+            <!-- moon icon (off) -->
+            <i class="fa-solid fa-moon swap-off fill-current text-xl"></i>
         </label>
         
         <!-- Notifications (Placeholder) -->
